Task#287_Refactor Chats Controller
